hphp/test/slow/await_as_an_expression/error/pipe5.php.expectf

Fatal error: `await` cannot be used as an expression right of a pipe operator. in %s/pipe5.php on line 19
